[tool.poetry]
name = "mlplot"
version = "0.1.0"
description = ""
authors = ["Alan Franzoni <username@franzoni.eu>"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0.0"
pandas = "^0.25.1"
matplotlib = "^3.1"
seaborn = "^0.9.0"
pyarrow = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
